[gd_scene load_steps=9 format=3 uid="uid://cu1ae01rxtlgm"]

[ext_resource type="Script" uid="uid://btvhqaqqkotls" path="res://resources/main.gd" id="1_0xm2m"]
[ext_resource type="Theme" uid="uid://dcc3ctxvwy8y2" path="res://resources/main.tres" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://btj2wabc4amg3" path="res://assets/images/backdrop.png" id="2_rfrky"]
[ext_resource type="FontFile" uid="uid://birahchd74q28" path="res://assets/fonts/saira/SairaBlack.ttf" id="3_h2yge"]
[ext_resource type="FontFile" uid="uid://b284ty7suqywp" path="res://assets/fonts/saira/SairaExtraLight.ttf" id="4_1bvp3"]
[ext_resource type="FontFile" uid="uid://dhswkr4fy3pf5" path="res://assets/fonts/saira/SairaSemiBold.ttf" id="5_lquwl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.752941, 0.25098, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_bottom_right = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.752941, 0.564706, 0.25098, 1)
corner_radius_top_left = 50
corner_radius_bottom_right = 50

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")

[node name="Backdrop" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_rfrky")

[node name="MainUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_right = -640.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig7tw")
alignment = 1

[node name="Title" type="Label" parent="MainUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_fonts/font = ExtResource("3_h2yge")
theme_override_font_sizes/font_size = 128
text = "Solarae"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameEntry" type="LineEdit" parent="MainUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
placeholder_text = "Enter your username..."
max_length = 32

[node name="HostButton" type="Button" parent="MainUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_colors/font_hover_pressed_color = Color(0.752941, 0.25098, 0.313726, 1)
theme_override_colors/font_hover_color = Color(0.752941, 0.25098, 0.313726, 1)
theme_override_colors/font_color = Color(0.752941, 0.25098, 0.313726, 1)
theme_override_colors/font_focus_color = Color(0.752941, 0.25098, 0.313726, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_0xm2m")
disabled = true
text = "Host a game"

[node name="CodeEntry" type="LineEdit" parent="MainUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
placeholder_text = "Enter the join code..."
max_length = 7

[node name="JoinButton" type="Button" parent="MainUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_colors/font_hover_pressed_color = Color(0.752941, 0.564706, 0.25098, 1)
theme_override_colors/font_hover_color = Color(0.752941, 0.564706, 0.25098, 1)
theme_override_colors/font_color = Color(0.752941, 0.564706, 0.25098, 1)
theme_override_colors/font_focus_color = Color(0.752941, 0.564706, 0.25098, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_h2yge")
disabled = true
text = "Join a game"

[node name="HostLobbyUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostLobbyUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = -324.0
offset_right = 425.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig7tw")
alignment = 1

[node name="LobbyCode" type="Label" parent="HostLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_fonts/font = ExtResource("4_1bvp3")
text = "Lobby code is: ???"
horizontal_alignment = 1

[node name="NameDisplay" type="Label" parent="HostLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_fonts/font = ExtResource("5_lquwl")
text = "No other player connected"
horizontal_alignment = 1

[node name="CopyCodeButton" type="Button" parent="HostLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
text = "Copy join code"

[node name="KickButton" type="Button" parent="HostLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
disabled = true
text = "Kick the other player"

[node name="StartButton" type="Button" parent="HostLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_styles/normal = SubResource("StyleBoxFlat_h2yge")
disabled = true
text = "Start the game"

[node name="JoinLobbyUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="JoinLobbyUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = -324.0
offset_right = 425.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ig7tw")
alignment = 1

[node name="NameDisplay" type="Label" parent="JoinLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_fonts/font = ExtResource("5_lquwl")
text = "No other player connected"
horizontal_alignment = 1

[node name="LeaveButton" type="Button" parent="JoinLobbyUI/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ig7tw")
theme_override_styles/normal = SubResource("StyleBoxFlat_h2yge")
disabled = true
text = "Leave the lobby"

[connection signal="text_changed" from="MainUI/VBoxContainer/NameEntry" to="." method="_on_name_entry_text_changed"]
[connection signal="pressed" from="MainUI/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="text_changed" from="MainUI/VBoxContainer/CodeEntry" to="." method="_on_code_entry_text_changed"]
[connection signal="pressed" from="MainUI/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="HostLobbyUI/VBoxContainer/CopyCodeButton" to="." method="_on_copy_code_button_pressed"]
[connection signal="pressed" from="HostLobbyUI/VBoxContainer/KickButton" to="." method="_on_kick_button_pressed"]
[connection signal="pressed" from="HostLobbyUI/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="JoinLobbyUI/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
